//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  eventParticipants EventParticipant [not null]
  groupMessage GroupMessage [not null]
  groupMember GroupMember [not null]
}

Table Event {
  id String [pk]
  name String [not null]
  description String [not null]
  street String [not null]
  city String [not null]
  country String [not null]
  postCode String [not null]
  startDate DateTime [not null]
  latitude Decimal
  longitude Decimal
  tags EventTag [not null]
  EventCategory EventCategory [not null]
  UserEvents EventParticipant [not null]
  group Group
  groupId String
}

Table Group {
  id String [pk]
  name String [not null]
  description String [not null]
  eventTags EventTag [not null]
  groupMessages GroupMessage [not null]
  userGroups GroupMember [not null]
  events Event [not null]
}

Table EventParticipant {
  role EventRole [not null, default: 'USER']
  user User [not null]
  userId String [not null]
  event Event [not null]
  eventId String [not null]

  indexes {
    (userId, eventId) [pk]
  }
}

Table GroupMember {
  role GroupRole [not null, default: 'USER']
  user User [not null]
  userId String [not null]
  group Group [not null]
  groupId String [not null]

  indexes {
    (userId, groupId) [pk]
  }
}

Table EventTag {
  id String [pk]
  name String [not null]
  events Event [not null]
  Group Group
  groupId String
}

Table EventCategory {
  id String [pk]
  name String [not null]
  events Event [not null]
}

Table GroupMessage {
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  group Group [not null]
  groupId String [not null]

  indexes {
    (userId, groupId) [pk]
  }
}

Table EventToEventTag {
  tagsId String [ref: > EventTag.id]
  eventsId String [ref: > Event.id]
}

Table EventToEventCategory {
  eventcategoryId String [ref: > EventCategory.id]
  eventsId String [ref: > Event.id]
}

Enum GroupRole {
  USER
  ADMIN
}

Enum EventRole {
  USER
  ADMIN
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Event.groupId > Group.id

Ref: EventParticipant.userId > User.id

Ref: EventParticipant.eventId > Event.id

Ref: GroupMember.userId > User.id

Ref: GroupMember.groupId > Group.id

Ref: EventTag.groupId > Group.id

Ref: GroupMessage.userId > User.id

Ref: GroupMessage.groupId > Group.id